...

    var body: some View {
        NavigationSplitView(
            columnVisibility: .constant(.all),
            sidebar: {
                SidebarView()
                    .accessibilityIdentifier("view.sidebar")
            },
            detail: {
                detailView
                    .accessibilityIdentifier("view.detail")
            }
        )
        .navigationSplitViewStyle(.balanced)
        .toolbar {
            MainToolbarView(
                isAddingProject: $isAddingProject,
...
